--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-i18next": "^16.3.3",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "yup": "^1.7.1"
   },
   "devDependencies": {
